fix: login with facebook

--- a/app/views/blocks/sidebar.html
+++ b/app/views/blocks/sidebar.html
@@ -5,14 +5,15 @@
 
   </div>
   <div class="sidebar-header">
-      <img alt="Udacity" src="https://d125fmws0bore1.cloudfront.net/assets/svgs/logo-udacity-mark-e55958b7fd6d392c1e343b02a9e045cb669c33cfa1bb772bba40897a0f2b482d.svg" width="78" height="22">
-
+    <img alt="Facehack Logo" src="../images/facehack.png">
+    <div class="pull-right m-r-35">
       <button type="button" class="btn btn-xs sidebar-slide-toggle btn-link m-l-20" data-pages-toggle="#appMenu"><i class="fa fa-angle-down fs-16"></i>
       </button>
       <button type="button" class="btn btn-link visible-lg-inline" data-toggle-pin="sidebar"><i class="fa fs-12"></i>
       </button>
     </div>
   </div>
+
   <div class="sidebar-menu">
     <ul class="menu-items">
       <li class="m-t-30 open" ui-sref-active="active">
