--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -110,5 +110,10 @@ input[value="off"] {
   outline: none; }
 
 .btn-facehack {
-  margin-top: 34%;
+  margin-top: 9%;
   background-color: #2f323c; }
+
+@media only screen and (max-device-width: 480px) {
+  .btn-facehack {
+    margin-top: 34%;
+    background-color: #2f323c; } }
