--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -132,6 +132,13 @@ input[value="off"] {
 }
 
 .btn-facehack{
-	margin-top: 34%;
+	margin-top: 9%;
 	background-color: #2f323c;
+}
+
+@media only screen and (max-device-width: 480px) {
+	.btn-facehack{
+		margin-top: 34%;
+		background-color: #2f323c;
+	}
 }
