--- a/app/views/blocks/header.html
+++ b/app/views/blocks/header.html
@@ -1,5 +1,5 @@
 <!-- START HEADER -->
-<div class="header " ng-class="{'transparent': is('app.maps.vector') || is('app.maps.google') }">
+<div class="header " ng-class="{'transparent': is('app.maps.vector') || is('app.maps.google') }" ng-controller="DashboardCtrl as vm">
     <!-- START MOBILE CONTROLS -->
     <div class="container-fluid relative">
       <!-- LEFT SIDE -->
@@ -15,7 +15,7 @@
       <div class="pull-center hidden-md hidden-lg">
         <div class="header-inner">
           <div class="brand inline">
-            <img alt="Udacity" src="https://d125fmws0bore1.cloudfront.net/assets/svgs/logo-udacity-mark-e55958b7fd6d392c1e343b02a9e045cb669c33cfa1bb772bba40897a0f2b482d.svg" width="78" height="22">
+            <img alt="Facehack Logo" src="../images/facehack.png">
           </div>
         </div>
       </div>
@@ -25,9 +25,40 @@
     <div class=" pull-left sm-table hidden-xs hidden-sm">
         <div class="header-inner">
             <div class="brand inline">
-              <img alt="Udacity" src="https://d125fmws0bore1.cloudfront.net/assets/svgs/logo-udacity-mark-e55958b7fd6d392c1e343b02a9e045cb669c33cfa1bb772bba40897a0f2b482d.svg" width="78" height="22">
+              <img alt="Facehack Logo" src="../images/facehack.png">
             </div>
         </div>
+    </div>
+
+    <div class=" pull-right">
+        <!-- START User Info-->
+        <div class="visible-lg visible-md m-t-10">
+            <div class="pull-left p-r-10 p-t-10 fs-16 font-heading">
+                <span class="semi-bold">{{vm.user.displayName}}</span>
+            </div>
+            <div class="dropdown pull-right">
+                <button class="profile-dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <span class="thumbnail-wrapper d32 circular inline m-t-5">
+                <img ng-src="{{vm.user.photoURL}}" alt="" ui-jq="unveil" width="32" height="32">
+            </span>
+                </button>
+                <ul class="dropdown-menu profile-dropdown" role="menu">
+                    <li><a href=""><i class="pg-settings_small"></i> Settings</a>
+                    </li>
+                    <li><a href=""><i class="pg-outdent"></i> Feedback</a>
+                    </li>
+                    <li><a href=""><i class="pg-signals"></i> Help</a>
+                    </li>
+                    <li class="bg-master-lighter">
+                        <a href="" class="clearfix">
+                            <span class="pull-left">Logout</span>
+                            <span class="pull-right"><i class="pg-power"></i></span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <!-- END User Info-->
     </div>
 </div>
 <!-- END HEADER -->
