--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -132,13 +132,39 @@ input[value="off"] {
 }
 
 .btn-facehack{
-	margin-top: 9%;
+	// margin-top: 9%;
 	background-color: #2f323c;
+}
+
+.btn-m-t{
+	margin-top: 9%;
+}
+
+.gallery-item {
+    margin-right: 25px;
 }
 
 @media only screen and (max-device-width: 480px) {
 	.btn-facehack{
-		margin-top: 34%;
+		// margin-top: 34%;
 		background-color: #2f323c;
 	}
+	.btn-m-t{
+		margin-top: 34%;
+	}
+}
+
+.face-img-responsive {
+	display: block;
+	max-width: 112%;
+	height: auto;
+	margin-left: -15px;
+}
+
+.face-card-label {
+	width: 181px;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	overflow: hidden;
+	font-size: 16px;
 }
