--- a/app/views/core/login.html
+++ b/app/views/core/login.html
@@ -3,21 +3,33 @@
   <div class="lamp"><div class="gonna-give-light"></div></div>
 
   <div class="text-center hidden-xs hidden-sm">
-    <button class="btn btn-primary btn-cons btn-facehack" tabindex="0" ng-click="vm.login_desktop()">
-      <span ng-show="vm.lamp">Facehack</span>
-      <span ng-show="!vm.lamp">185.60.216.35</span>
-    </button>
+    <div class="btn-group btn-m-t" role="group">
+      <button class="btn btn-primary btn-facehack" tabindex="0" ng-click="vm.login_desktop()">
+        <span ng-show="vm.lamp">Facehack</span>
+        <span ng-show="!vm.lamp">185.60.216.35</span>
+      </button>
+      <button class="btn btn-primary"  ng-click="vm.lamp = !vm.lamp">
+        <i class="fa fa-unlock" aria-hidden="true" ng-show="vm.lamp"></i>
+        <i class="fa fa-lock" aria-hidden="true" ng-show="!vm.lamp"></i>
+      </button>
+    </div>
   </div>
 
   <div class="text-center visible-sm visible-xs">
-    <button class="btn btn-primary btn-cons btn-facehack" tabindex="0" ng-click="vm.login_mobile()">
-      <span ng-show="vm.lamp">Facehack</span>
-      <span ng-show="!vm.lamp">185.60.216.35</span>
-    </button>
+    <div class="btn-group btn-m-t" role="group">
+      <button class="btn btn-primary btn-facehack" tabindex="0" ng-click="vm.login_mobile()">
+        <span ng-show="vm.lamp">Facehack</span>
+        <span ng-show="!vm.lamp">185.60.216.35</span>
+      </button>
+      <button class="btn btn-primary"  ng-click="vm.lamp = !vm.lamp">
+        <i class="fa fa-unlock" aria-hidden="true" ng-show="vm.lamp"></i>
+        <i class="fa fa-lock" aria-hidden="true" ng-show="!vm.lamp"></i>
+      </button>
+    </div>
   </div>
 
-  <div class="col-xs-12 text-center bottom">
+  <!-- <div class="col-xs-12 text-center bottom">
     <label for="switch" class="entypo-lamp bottom" ng-click="vm.lamp = !vm.lamp" tabindex="-1"></label>
-  </div>
+  </div> -->
 
 </div>
