--- a/app/views/blocks/footer.html
+++ b/app/views/blocks/footer.html
@@ -5,7 +5,7 @@
                     <span class="font-montserrat">Alan Mortoni</span>.
                 </p>
                 <p class="small no-margin pull-right sm-pull-reset">
-                    <span class="hint-text">for Udacity</span>
+                    <span class="hint-text footer-label">for Udacity</span>
                 </p>
                 <div class="clearfix"></div>
             </div>
