--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -136,3 +136,15 @@ input[value="off"] {
   white-space: nowrap;
   overflow: hidden;
   font-size: 16px; }
+
+.face-row {
+  background: #e4e1e1; }
+
+.user-menu-label {
+  color: #767676;
+  background: white;
+  opacity: 1; }
+
+.footer-label {
+  color: #565656 !important;
+  opacity: 1 !important; }
