--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -168,3 +168,18 @@ input[value="off"] {
 	overflow: hidden;
 	font-size: 16px;
 }
+
+.face-row {
+	background: #e4e1e1;
+}
+
+.user-menu-label{
+	color: rgb(118, 118, 118);
+  background: rgb(255, 255, 255);
+  opacity: 1;
+}
+
+.footer-label{
+	color: #565656 !important;
+  opacity: 1 !important;
+}
