--- a/app/views/blocks/quick_view.html
+++ b/app/views/blocks/quick_view.html
@@ -36,7 +36,7 @@
 
               <span>Once you select a page would you</span><br>
               <span class="m-r-10">like to listen it automactly</span>
-              <md-checkbox ng-model="test" aria-label="Once You sele a Page Would you like to listen it Automactly" class="md-primary">
+              <md-checkbox ng-model="vm.automactly" ng-change="vm.auto()" aria-label="Once You sele a Page Would you like to listen it Automactly" class="md-primary">
 
               </md-checkbox>
 
