--- a/app/views/blocks/sidebar.html
+++ b/app/views/blocks/sidebar.html
@@ -5,7 +5,7 @@
 
   </div>
   <div class="sidebar-header">
-    <!-- <img alt="Facehack Logo" src="http://cdn.mysitemyway.com/etc-mysitemyway/icons/legacy-previews/icons-256/magic-marker-icons-symbols-shapes/116356-magic-marker-icon-symbols-shapes-tile4-sc36.png" height="60" width="60"> -->
+    <img alt="Udacity Logo" src="../images/logo.svg" width="78" height="22">
     <div class="pull-right m-r-35">
       <!-- <button type="button"
               class="btn btn-xs sidebar-slide-toggle btn-link m-l-20"
