--- a/app/styles/pages.css
+++ b/app/styles/pages.css
@@ -4651,7 +4651,7 @@ body > .pgn-wrapper {
 .modal .modal-header {
   text-align: center;
   border-bottom: 0;
-  padding: 25px 25px 0 25px;
+  padding: 25px 25px 12px 25px;
 }
 .modal .modal-header p {
   color: #8b91a0;
@@ -13724,7 +13724,7 @@ Main components
     background-size: 480px 40px;
   }
   .alert .close {
-    background: url("../images/noti-cross-2x.png") no-repeat scroll 0 0 transparent;
+    background: url("/images/noti-cross-2x.png") no-repeat scroll 0 0 transparent;
     background-position: -9px -10px;
     width: 10px;
     height: 9px;
