--- a/app/views/blocks/header.html
+++ b/app/views/blocks/header.html
@@ -74,7 +74,7 @@
                       </a>
                     </li>
                     <li role="menuitem" tabindex="-1" class="bg-master-lighter">
-                        <a href="" class="clearfix">
+                        <a href="" class="clearfix" ng-click="vm.logout()">
                             <span class="pull-left">Logout</span>
                             <span class="pull-right"><i class="fa fa-sign-out" aria-hidden="true"></i></span>
                         </a>
