--- a/app/views/app/dashboard.html
+++ b/app/views/app/dashboard.html
@@ -1,56 +1,3 @@
 <div class="container-fluid padding-25 sm-padding-10">
-
-  <div class="row">
-    <form role="form">
-      <div class="form-group btn-group col-xs-12 col-md-4 col-md-offset-4">
-
-        <label>Type in a facebook page name and press enter</label>
-        <div class="col-xs-12">
-          <div class="col-xs-10">
-            <input type="text"
-                   class="form-control"
-                   ng-keypress="vm.searchBox($event)"
-                   ng-model="vm.searchInput"
-                   tabindex="0"
-                   aria-label="Type in a facebook page name and press enter">
-          </div>
-          <div class="col-xs-2 p-l-0">
-            <button type="button"
-                    class="btn btn-default"
-                    data-toggle="quickview"
-                    data-toggle-element="#quickview"
-                    tabindex="0"
-                    aria-label="Click here to open configurations">
-                    <i class="fa fa-cog" aria-hidden="true"></i>
-            </button>
-          </div>
-        </div>
-
-      </div>
-    </form>
-  </div>
-
-  <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3" ng-repeat="page in vm.pages | orderBy: 'fan_count':true" style="padding: 0;" ng-if="page.cover">
-    <md-card md-theme-watch>
-      <md-card-title>
-        <md-card-title-text>
-          <span class="md-headline face-card-label">{{page.name}}</span>
-          <span class="md-subhead">{{page.fan_count | number}}
-            <i class="fa fa-heart-o" aria-hidden="true"></i>
-          </span>
-        </md-card-title-text>
-        <md-card-title-media>
-          <div class="thumbnail-wrapper d64 circular">
-            <img width="40" height="40" ng-src="{{page.picture}}" alt="{{page.name}} Picture"/>
-          </div>
-        </md-card-title-media>
-      </md-card-title>
-      <md-card-actions layout="row" layout-align="end center">
-        <md-button>Spy</md-button>
-        <md-button ng-click="vm.hack(page)">Hack</md-button>
-        <md-button>More</md-button>
-      </md-card-actions>
-    </md-card>
-  </div>
-
+  <fck-cards></fck-cards>
 </div>
