--- a/app/views/blocks/header.html
+++ b/app/views/blocks/header.html
@@ -1,5 +1,5 @@
 
-<div class="header " ng-controller="DashboardCtrl as vm">
+<div class="header">
     <div class="container-fluid relative">
       <div class="pull-left full-height visible-sm visible-xs">
         <div class="header-inner">
@@ -25,52 +25,11 @@
     </div>
 
     <div class=" pull-right">
-        <!-- <div class="header-inner"> -->
-            <!-- <a href=""
-               class="btn-link icon-set menu-hambuger-plus m-l-20 sm-no-margin hidden-sm hidden-xs"
-               data-toggle="quickview"
-               data-toggle-element="#quickview"></a> -->
-        <!-- </div> -->
     </div>
 
     <div class=" pull-right">
         <div class="visible-lg visible-md m-t-10">
-            <div class="pull-left p-r-10 p-t-10 fs-16 font-heading">
-                <span class="semi-bold">{{vm.user.displayName}}</span>
-            </div>
-            <div class="dropdown pull-right">
-                <button class="profile-dropdown-toggle"
-                        type="button" data-toggle="dropdown"
-                        aria-haspopup="true"
-                        aria-expanded="false"
-                        tabindex="0"
-                        aria-label="User Menu">
-                    <span class="thumbnail-wrapper d32 circular inline m-t-5">
-                      <img ng-src="{{vm.user.photoURL}}" alt="User photo" ui-jq="unveil" width="32" height="32">
-                    </span>
-                </button>
-
-                <ul class="dropdown-menu profile-dropdown" role="menu">
-                    <li role="menuitem" tabindex="-1">
-                      <a href="" data-toggle="quickview" data-toggle-element="#quickview">
-                        <i class="fa fa-cog" aria-hidden="true"></i>
-                        <span class="user-menu-label">Settings</span>
-                      </a>
-                    </li>
-                    <li role="menuitem" tabindex="-1">
-                      <a href="">
-                        <i class="fa fa-question" aria-hidden="true"></i>
-                        <span class="user-menu-label">Help</span>
-                      </a>
-                    </li>
-                    <li role="menuitem" tabindex="-1" class="bg-master-lighter">
-                        <a href="" class="clearfix" ng-click="vm.logout()">
-                            <span class="pull-left">Logout</span>
-                            <span class="pull-right"><i class="fa fa-sign-out" aria-hidden="true"></i></span>
-                        </a>
-                    </li>
-                </ul>
-            </div>
+            <fck-profile></fck-profile>
         </div>
     </div>
 </div>
