--- a/app/components/pages-pool/pages-pool.tpl.html
+++ b/app/components/pages-pool/pages-pool.tpl.html
@@ -1,5 +1,5 @@
 <div class="col-xs-12 -col-sm-12 col-md-4">
-  <md-toolbar class="md-table-toolbar md-default bk-trans">
+  <md-toolbar class="content-table-header md-default bk-trans">
     <div class="md-toolbar-tools">
       <span class="m-r-20">Pages Pool</span>
       <button type="button"
