--- a/app/styles/base.scss
+++ b/app/styles/base.scss
@@ -3,4 +3,6 @@
 @import "./styles";
 
 // Components
-@import "../components/card/card"
+@import "../components/card/card";
+@import "../components/contents-pool/contents-pool";
+@import "../components/sidebar/sidebar";
