--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -182,3 +182,8 @@ input[value="off"] {
 	padding: 0px;
 	border-bottom: 1px solid;
 }
+
+.content-table-header {
+	background-color: rgb(43, 48, 59)!important;
+	color: rgba(255,255,255,0.87) !important;
+}
