fix: html and scss

--- a/app/components/contents-pool/contents-pool.scss
+++ b/app/components/contents-pool/contents-pool.scss
@@ -2,17 +2,21 @@
   margin-top: 15px;
 }
 
-table.md-table {
-	&:not(.md-row-select) {
-		td.md-cell {
-			&:nth-child(n+2) {
-				&:nth-last-child(n+2) {
-					padding: 0 5px 0 0;
-				}
-			}
-		}
-	}
-	td.md-cell {
-		padding: 5px 10px !important;
-	}
+table {
+  .md-table {
+  	&:not(.md-row-select) {
+  		td {
+        .md-cell {
+    			&:nth-child(n+2) {
+    				&:nth-last-child(n+2) {
+    					padding: 0 5px 0 0;
+    				}
+    			}
+    		}
+      }
+  	}
+  	td.md-cell {
+  		padding: 5px 10px !important;
+  	}
+  }
 }
