--- a/app/components/contents-pool/contents-pool.tpl.html
+++ b/app/components/contents-pool/contents-pool.tpl.html
@@ -1,5 +1,5 @@
 <div class="col-xs-12 -col-sm-12 col-md-8">
-    <md-toolbar class="content-table-header md-default bk-trans">
+    <md-toolbar id="contents" class="content-table-header md-default bk-trans">
       <div class="md-toolbar-tools">
         <span class="m-r-20">Contents Pool</span>
         <button type="button"
@@ -123,7 +123,15 @@
                   </div>
 
                   <div ng-show="vm.selected.type === 'video'">
-                    <iframe  target="_top" class="youtube-player" type="text/html" width="548" height="350" ng-src="{{vm.trustSrc()}}" allowfullscreen frameborder="0">
+                    <iframe  target="_top"
+                             class="youtube-player"
+                             type="text/html"
+                             width="548"
+                             height="350"
+                             ng-src="{{vm.trustSrc()}}"
+                             allowfullscreen
+                             frameborder="0">
+                    </iframe>
                   </div>
 
                 </div>
