--- a/app/components/sidebar/sidebar.scss
+++ b/app/components/sidebar/sidebar.scss
@@ -1,3 +1,7 @@
-.page-sidebar .sidebar-menu .menu-items {
-  overflow: hidden;
+.page-sidebar {
+  .sidebar-menu {
+    .menu-items {
+      overflow: hidden;
+    }
+  }
 }
