feat: database add

--- a/app/components/contents-pool/contents-pool.tpl.html
+++ b/app/components/contents-pool/contents-pool.tpl.html
@@ -1,5 +1,5 @@
-<div class="col-xs-12 -col-sm-12 col-md-8">
-    <md-toolbar id="contents" class="content-table-header md-default bk-trans">
+<div class="col-xs-12 -col-sm-12 col-md-8 contents">
+    <md-toolbar class="content-table-header md-default bk-trans">
       <div class="md-toolbar-tools">
         <span class="m-r-20">Contents Pool</span>
         <button type="button"
