--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -186,7 +186,7 @@ span.footer-label {
   border-bottom: 1px solid;
 }
 
-#contents.content-table-header {
+.contents .content-table-header {
   background-color: $bg-ebony;
   color: $bg-white-matte-87;
 }
